--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-slick": "^0.30.2",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-buddy/palette-mui": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
