trabajando en las actividades

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Cabuerniaventura",
+  "name": "Aplicacion multiaventura TFG_2024_Multiaventura-WebApp",
   "icons": [
     {
       "src": "favicon.ico",
